saved queries overflow fixed

--- a/src/app/components/query-history/query-history.component.css
+++ b/src/app/components/query-history/query-history.component.css
@@ -3,18 +3,41 @@
     display: flex;
     flex-direction: column;
 } */
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 .history-list {
   flex-grow: 1;
   overflow-y: scroll;
 }
 .card-header {
   background-color: #20c1d5 !important;
-  border-radius: 3% !important;
+  border-radius: 4% !important;
   border: none;
   width: 100%;
 }
 .history-box {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22) !important;
+  overflow-y: scroll;
+  padding-bottom: 1%;
   background-color: whitesmoke;
 }
 .green-icon {
@@ -32,7 +55,8 @@
   align-items: center;
 }
 .history-list-card {
-  padding: 1px;
+  padding-top: 1rem;
+  border-radius: 5px;
 }
 .text-query {
   word-break: break-word;
